# Cumulative-Probability-of-Success

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
daily_plans/: day1_plan.md  day2_plan.md  day3_plan.md  day4_plan.md
data/: asset_schema.json  baseline_rates.json  drug_registry.json  golden_scenarios.json  taxonomy.json
data/raw/: baselines_all_indications.json  baselines_biomarker.json  baselines_disease_phase.json  baselines_modality.json  baselines_novelty.json  baselines_oncology_subtype.json  baselines_rare_chronic.json  benchmarks_bioqls.json  wong2019.json
docs/: fallback_hierarchy.md  likelihood_ratios.md  pipeline.md  validation.md
scripts/: assess_drug.py  build_baseline_rates.py  build_golden_scenarios.py
src/pos_engine/: __init__.py  asset.py  baseline_lookup.py  config.py  engine.py  likelihood_ratios.py  odds.py  registry.py  report.py  taxonomy.py
tests/: test_asset.py  test_baseline_rates.py  test_benchmarks.py  test_engine.py  test_likelihood_ratios.py  test_odds.py  test_regression.py  test_report.py  test_shrinkage.py  test_shrinkage_sweep.py  test_taxonomy.py  test_wong.py
